--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -1,6 +1,6 @@
-<div class="vayau-routing vayau-roster" ng-controller="rosterCtrl">
+<div class="vayau-routing vayau-roster" ng-controller="rosterCtrl"  ng-init="init()">
 
-  <div class="container-fluid mt-4" ng-init="init()">
+  <div class="container-fluid mt-4">
     <div class="row">
       <div class="col-md-8">
         <toaster-container></toaster-container>
@@ -73,10 +73,12 @@
                         </div>
                     </div>
                 </div> -->
-    </div>
 
+    </div>
     <div class="row analytic-panel">
-      <div class="col-md-1 pad-8"></div>
+      <div class="col-md-1 pad-8">
+
+      </div>
       <div class="col-md-2 pad-8">
         <div class="card-analytic routes">
           <div class="card-inner-wrapper">
@@ -141,7 +143,7 @@
             </thead>
 
             <tbody ng-show="rosters.length">
-              <tr ng-class="{'active': ($index % 2) === 0}" ng-repeat="roster in rosters">
+              <tr  ng-repeat="roster in rosters">
                 <th scope="row">
                   <a href="" ng-click="showPopupWindow(roster)">{{roster.name}}</a>
                 </th>
