site UI bug Fixes

--- a/app/views/sites/_form.html.slim
+++ b/app/views/sites/_form.html.slim
@@ -23,7 +23,7 @@ div#site_html
               | Sez / Non Sez
             select.form-control.sezNonSez#sezNonSez[data-vehicleNumber="1"]
               option [value="non sez"]
-                | SEZ-Non SEZ
+                | Non SEZ
               option [value="sez"]
                 | SEZ
           .col-md-4.no-margin.lut_sez
@@ -86,7 +86,7 @@ div#site_html
             input#latitude[class="form-control" type="text" name="latitude" value=""]
           .col-md-4.no-margin
             label.site_labels for="longitude"
-              | LONG *
+              | Long *
             input#longitude[class="form-control" type="text" name="longitude" value=""]  
           .col-md-4.no-margin
             label.site_labels for="proximity_radius"
@@ -125,7 +125,7 @@ div#site_html
       .col-md-12
         .div[style="border: 1px solid #8d8e90;display: inline-block;margin-top: 20px;padding-top: 10px;padding-bottom: 20px;"] 
           .col-md-12[style="font-size: medium;text-align: center;padding: 10px;font-weight: bold;"] 
-              | Party Details
+              |Billing Party Details
           .col-md-4.no-margin
             label.site_labels for="party_name"
               | Party Name *
