--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -156,7 +156,7 @@
                   <th>Shift</th>
                   <th>Shift Time</th>
                   <th>Vehicle Type</th>
-                  <th>Vehicle RC No</th>
+                  <th>Plate No</th>
                   <th>Driver Name</th>
                   <th>Current Status</th>
                   <th>Action</th>
@@ -237,7 +237,7 @@
                           <div class="form-group">
                             <div class="input-group">
                               <input type="text" class="form-control" ng-model="item.comment" placeholder="Comment">
-                              <div ng-click="updateCallStatus(item)" ng-class="{'panic':modelData.is_panic}"
+                              <div ng-click="updateCallStatus(item, modelData)" ng-class="{'panic':modelData.is_panic}"
                                 class="input-group-addon btn vaayu-pop-action-btn">Done</div>
                             </div>
                           </div>
@@ -300,21 +300,22 @@
                   <span class="pop-status">{{modelData.vehicle_type}}</span>
                   <span class="pop-carNumber"> {{modelData.vehicle_number}}</span>
                 </div>
-                {{modelData.trip_driver_is_panic}}
-                <div class="input-group label-default pad-2" style="width:100%;"
+                <div class="input-group  pad-2"
+                  style="width:100%;background-color: white;border-top: 1px solid lightgray;"
                   ng-class="{'panic':modelData.trip_driver_is_panic}">
                   <form class="form-inline">
-                    <div class="form-group" >
+                    <div class="form-group">
                       <div class="input-group">
-                        <input type="text" class="form-control" ng-model="modelData.comment" 
-                        ng-disabled="!modelData.trip_driver_is_panic"
-                        placeholder="Comment">
-                        <div ng-click="updateCallStatus(modelData)" class="input-group-addon btn vaayu-pop-action-btn"
-                          ng-disabled="!modelData.trip_driver_is_panic"
-                        >Done</div>
+                        <input type="text" class="form-control" ng-model="modelData.comment"
+                          ng-disabled="!modelData.trip_driver_is_panic" placeholder="Comment">
+                        <div ng-click="modelData.trip_driver_is_panic && addRemarkInTripForDriverPanic(modelData)"
+                          class="input-group-addon btn vaayu-pop-action-btn"
+                          ng-disabled="!modelData.trip_driver_is_panic">Done</div>
                       </div>
-                      <button type="button" ng-click="panicCallSesion(modelData.driver_id,'DriverToEmployee')"
-                        class="btn vaayu-pop-action-btn"><i class="fa fa-phone callIcon"></i></button>
+                      <button type="button" ng-click="panicCallSesion(modelData.driver_id,'Driver')"
+                        ng-disabled="modelData.driver_id === null" class="btn vaayu-pop-action-btn">
+                        <i class="fa fa-phone callIcon"></i>
+                      </button>
                     </div>
                     <!-- <div class="form-group" ng-if="!modelData.trip_driver_is_panic">
                       <div class="input-group">
