added driver pairing Or unpairing with on driver edit page showimg shift , site , contact no as aadhar number

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -901,3 +901,7 @@
     .ml_selec > .multiselect-parent{width: 100% !important;}
     .ml_selec > .multiselect-parent > .dropdown-toggle{width:100%;text-align: left;}
     .ml_selec > .multiselect-parent > .dropdown-toggle > .caret{ float: right;position: relative;top:10px;}
+
+    .hide_driver_field {
+      display: none !important;
+    };
