--- a/app/views/provisioning/_drivers.html.slim
+++ b/app/views/provisioning/_drivers.html.slim
@@ -38,6 +38,8 @@
             | Blacklisted
           th
             | Active
+          th
+            | Action
       tbody
 
 #checklist-modal
