added id for driver button disable

--- a/app/views/provisioning/index.html.slim
+++ b/app/views/provisioning/index.html.slim
@@ -48,7 +48,7 @@
                 a[class="people" href="#employers" data-toggle="tab" data-source="/employers/new"]
                   | Employers
             li.drivers
-              a[class="people" href="#drivers" data-toggle="tab" data-source="/drivers/new"]
+              a[class="people" id="driver_add" href="#drivers" data-toggle="tab" data-source="/drivers/new"]
                 |  Drivers
                 span.center.hidden[style="margin-bottom: 2px;" class="glyphicon glyphicon-dot"  id="badge-driver"]
             li.business-associates
