--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -268,6 +268,10 @@
                   <span class="pop-name">Arrival Time</span>
                   <span class="pop-status">{{modelData.trip_end_time}}</span>
                 </div>
+                <div>
+                  <span class="pop-name">Guard Assigned</span>
+                  <span class="pop-status">{{modelData.guard_assigned}}</span>
+                </div>
               </div>
             </div>
 
