--- a/app/views/provisioning/_employee_company.html.slim
+++ b/app/views/provisioning/_employee_company.html.slim
@@ -15,7 +15,7 @@
             th
               | PAN
             th
-              | Service Tax No.
+              | GSTIN
             th
               | Action
         tbody
