--- a/app/views/ingest_job/_stats.html.slim
+++ b/app/views/ingest_job/_stats.html.slim
@@ -26,7 +26,7 @@
           .col-md-12
             span#schedules-assigned-count.stat-count
             span
-              | employees assigned new schedules
+              | new schedules assigned
           .col-md-12
             span#schedules-provisioned-count.stat-count
             span
