Added common page for Edit Profile in operator app, removed dual PTS operator

--- a/app/views/home/profile_edit.html.slim
+++ b/app/views/home/profile_edit.html.slim
@@ -7,4 +7,4 @@
   .row.margin-top
     .col-md-12.margin-bottom.nav-actions-block
       -if @user
-        = render :partial => 'home/operator_profile'
+        = render :partial => 'home/admin_profile'
