--- a/app/views/configurators/angular_views/_contracts.html
+++ b/app/views/configurators/angular_views/_contracts.html
@@ -89,7 +89,7 @@
 
         </ul>
         <div class="tab-content">
-            <toaster-container ng-show="myValue"></toaster-container>
+            <toaster-container ng-show="toggleView"></toaster-container>
             <div id="CUSTOMER" class="tab-pane fade  " ng-class="{'in active show':isSet('CUSTOMER')}">
                 <div class="tab-content-area ">
                     <div class="card-header cut_title">
@@ -114,7 +114,6 @@
                                 <div class="form-group">
                                     <label class="leb_color" for="basic-url">Download Sample File</label>
                                     <div class="input-group mb-3" >
-
 
 
                                         <div ng-click="downloadSampleFile()" style="margin-top: 0px;"
