map changes and textual changes in trip board tab

--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -332,7 +332,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-5 pl-0">
+        <div class="col-md-5 pl-0" ng-init="initMap()">
           <div class="employee-cluster-panel custom-panel-map">
             <div class="employee-cluster-panel-heading">
               <div class="employee-cluster-panel-title">
