--- a/app/views/trips/angular_views/_trip_board.html
+++ b/app/views/trips/angular_views/_trip_board.html
@@ -269,11 +269,11 @@
 
               <div class="container" style="width:100%;">
                 <div>
-                  <span class="pop-name">Shift</span>
+                  <span class="pop-name">Shift Time</span>
                   <span class="pop-status">{{modelData.shift_time}}</span>
                 </div>
                 <div>
-                  <span class="pop-name">Arrival Time</span>
+                  <span class="pop-name">Trip End Time</span>
                   <span class="pop-status">{{modelData.trip_end_time}}</span>
                 </div>
                 <div>
