--- a/app/views/trips/_constraint.html
+++ b/app/views/trips/_constraint.html
@@ -22,7 +22,7 @@
     </div>
     
     
-    <ul class="nav nav-tabs">
+    <ul class="nav nav-tabs col-lg-12">
         <li class="nav-item nav-link " ng-class="{active:isSet(1)}" ng-click="setTab(1)">Guard</li>
         <li class="nav-item nav-link " ng-class="{active:isSet(2)}" ng-click="setTab(2)">Distance</li>
         <li class="nav-item nav-link" ng-class="{active:isSet(3)}" ng-click="setTab(3)">Time</li>
