--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -386,7 +386,7 @@
 
         <div class="row" style="margin:70px">
           <div class="col-md-6">
-            <button type="button" style="width:100%" class="btn btn-cancel ">Cancel</button>
+            <button type="button" style="width:100%" class="btn btn-cancel " ng-click="hideAddMenu2()">Cancel</button>
           </div>
           <div class="col-md-6">
             <button style="width:100%" type="button" ng-click="submitAddCustomRoute(selectedShift,to_time)"
